--- a/README
+++ b/README
@@ -22,7 +22,7 @@ along with ALU.  If not, see <http://www.gnu.org/licenses/>.
 What is ALU (Automatically Load URL)
 ====================================
 
-ALU is a very small peace of code written in HTML and Javascript and designed to
+ALU is a very small piece of code written in HTML and Javascript and designed to
 automatically load an URL and display the content of the URL inside an iframe.
 
 Is ALU polished and complete
